--- a/site-frontend/public/index.html
+++ b/site-frontend/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>CYANIC</title>
-    <meta name="description" content="Аренда 2 и 3-комнатных квартир на улицах Лукинская, Шолохова, Скульптора Мухиной и Чоботовская района Ново-Переделкино" />
+    <meta name="description" content="Аренда 2 и 3-комнатных квартир на улицах Лукинская, Шолохова, Скульптора Мухиной и Чоботовская в Ново-Переделкино" />
     <!-- <link rel="icon" href="<%= BASE_URL %>favicon.ico"> -->
 </head>
 <body class="bg-hot-pink avenir">
