--- a/site-frontend/public/index.html
+++ b/site-frontend/public/index.html
@@ -7,8 +7,9 @@
     <title>CYANIC</title>
     <meta name="description" content="Аренда 2 и 3-комнатных квартир на улицах Лукинская, Шолохова, Скульптора Мухиной и Чоботовская в Ново-Переделкино" />
     <!-- <link rel="icon" href="<%= BASE_URL %>favicon.ico"> -->
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Montserrat" />
 </head>
-<body class="bg-hot-pink avenir">
+<body class="bg-hot-pink">
     <div id="app"></div>
     <noscript><strong>We're sorry but cyanic doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript>
     <!-- built files will be auto injected -->
