--- a/site-frontend/public/index.html
+++ b/site-frontend/public/index.html
@@ -8,6 +8,8 @@
     <meta name="description" content="Аренда 2 и 3-комнатных квартир на улицах Лукинская, Шолохова, Скульптора Мухиной и Чоботовская в Ново-Переделкино" />
     <!-- <link rel="icon" href="<%= BASE_URL %>favicon.ico"> -->
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Montserrat" />
+    <meta name="yandex-verification" content="0ea1ba30c2710230" />
+    <meta name="google-site-verification" content="Pdz82werCWv_gUstG6Rn0nyT9CuMaDuGv3kqWVwOoxM" />
 </head>
 <body class="bg-hot-pink">
     <div id="app"></div>
