--- a/site-frontend/public/index.html
+++ b/site-frontend/public/index.html
@@ -11,7 +11,7 @@
     <meta name="yandex-verification" content="0ea1ba30c2710230" />
     <meta name="google-site-verification" content="Pdz82werCWv_gUstG6Rn0nyT9CuMaDuGv3kqWVwOoxM" />
 </head>
-<body class="bg-hot-pink">
+<body class="bg-gold">
     <div id="app"></div>
     <noscript><strong>We're sorry but cyanic doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript>
     <!-- built files will be auto injected -->
